fix: java 8 replace List.of to Arrays.asList(